--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <div>
         <h1 id ="title">WashU IS BACK IN</h1>
         <h1 id="time">Time</h1>
-        Todd Sproull, I hope you're proud of me.
+        <img src="andy.jpg  ">
+        <p>Todd Sproull, I hope you're proud of me.</p>
+
+        <a href="https://github.com/jackheuberger/WuBackIn">PR's welcome</a>
     </div>
     <script>
         var DateTime = luxon.DateTime;
